# llvm-framework

./: .gitignore  README.md
private/: CMakeLists.txt  public.h  src1.cpp  src2.cpp
public/: CMakeLists.txt  main.cpp  public.h
